@@ -39,18 +39,15 @@ public class ProductService {
 	@Autowired
 	private InventoryRepository inventoryRepository;
 
-
 	private ProductDTO convertToDTO(Product product) {
 		ProductDTO dto = new ProductDTO();
 		dto.setId(product.getId());
 		dto.setProductName(product.getProductName());
 		dto.setBrand(product.getBrand());
 		dto.setDescription(product.getDescription());
-		dto.setDiscount(product.getDiscount());
 		dto.setReturnDays(product.getReturnDays());
 		dto.setMrp(product.getMRP());
 		dto.setStatus(product.getStatus());
-		dto.setAfterDiscount(product.getAfterDiscount());
 		dto.setUnit(product.getUnit());
 		dto.setNetWeight(product.getNetWeight());
 
@@ -63,20 +60,19 @@ public class ProductService {
 					.collect(Collectors.toList());
 			dto.setImageUrls(urls);
 		}
-		
+
 		List<Inventory> inventories = inventoryRepository.findByProductId(product.getId());
-	    if (!inventories.isEmpty()) {
-	        dto.setInventoryId(inventories.get(0).getId()); // First branch inventory ID
-	        dto.setAvailableStock(inventories.get(0).getAvailableStock());
-	    }
+		if (!inventories.isEmpty()) {
+			dto.setInventoryId(inventories.get(0).getId()); // First branch inventory ID
+			dto.setAvailableStock(inventories.get(0).getAvailableStock());
+		}
 		return dto;
 	}
-
-
-
+	
+	
 
 	public ProductDTO add(Long categoryId, MultipartFile[] images, String productName, String brand, String description,
-			Double discount, Integer returnDays, Double mrp, UnitType unitType, Double netWeight) throws IOException {
+			Integer returnDays, Double mrp, UnitType unitType, Double netWeight) throws IOException {
 
 		Category category = categoryRepo.findById(categoryId)
 				.orElseThrow(() -> new ResourceNotFoundException("Category not found"));
@@ -85,19 +81,12 @@ public class ProductService {
 		product.setProductName(productName);
 		product.setBrand(brand);
 		product.setDescription(description);
-		product.setDiscount(discount);
 		product.setReturnDays(returnDays);
 		product.setMRP(mrp);
 		product.setCategory(category);
 		product.setStatus(true);
 		product.setUnit(unitType);
 		product.setNetWeight(netWeight);
-		
-		if (mrp != null && discount != null) {
-			product.setAfterDiscount(mrp - (mrp * discount / 100));
-		} else {
-			product.setAfterDiscount(mrp);
-		}
 
 		Product savedProduct = productRepo.save(product);
 
@@ -118,8 +107,9 @@ public class ProductService {
 
 		return convertToDTO(finalProduct);
 	}
-
-
+	
+	
+	
 
 	public void inActive(Long id, Boolean status) {
 
@@ -129,35 +119,30 @@ public class ProductService {
 		product.setStatus(status);
 		productRepo.save(product);
 	}
-
-
-
+	
+	
 
 	public List<ProductDTO> activeProd() {
 
 		List<Product> products = productRepo.findByStatusTrue();
 
-		return products.stream()
-				.map(this::convertToDTO)
-				.collect(Collectors.toList());
+		return products.stream().map(this::convertToDTO).collect(Collectors.toList());
 	}
-
-
+	
+	
+	
 
 	public List<ProductDTO> getInActive() {
 
 		List<Product> products = productRepo.findByStatusFalse();
 
-		return products.stream()
-				.map(this::convertToDTO)
-				.collect(Collectors.toList());
+		return products.stream().map(this::convertToDTO).collect(Collectors.toList());
 	}
-
-
-
+	
+	
 
 	public Product updateProduct(Long id, MultipartFile[] images, String productName, String brand, String description,
-			Double discount, Integer returnDays, Double mrp, Long categoryId, UnitType unitType, Double netWeight) throws IOException {
+			Integer returnDays, Double mrp, Long categoryId, UnitType unitType, Double netWeight) throws IOException {
 
 		Product product = productRepo.findById(id)
 				.orElseThrow(() -> new ResourceNotFoundException("Product not found with id: " + id));
@@ -168,23 +153,17 @@ public class ProductService {
 			product.setBrand(brand);
 		if (description != null)
 			product.setDescription(description);
-		if (discount != null)
-			product.setDiscount(discount);
 		if (returnDays != null)
 			product.setReturnDays(returnDays);
 		if (mrp != null)
 			product.setMRP(mrp);
-		
-		if(unitType != null) {
+
+		if (unitType != null) {
 			product.setUnit(unitType);
 		}
-		
-		if(netWeight != null) {
+
+		if (netWeight != null) {
 			product.setNetWeight(netWeight);
-		}
-		
-		if (product.getMRP() != null && product.getDiscount() != null) {
-			product.setAfterDiscount(product.getMRP() - (product.getMRP() * product.getDiscount() / 100));
 		}
 
 		if (categoryId != null) {
@@ -216,8 +195,8 @@ public class ProductService {
 
 		return productRepo.save(product);
 	}
-
-
+	
+	
 
 	public List<ProductDTO> byCategory(Long categoryId) {
 
@@ -226,9 +205,23 @@ public class ProductService {
 
 		List<Product> products = productRepo.findByCategoryId(category.getId());
 
+		return products.stream().map(this::convertToDTO).collect(Collectors.toList());
+	}
+
+	
+	
+	public List<ProductDTO> searchByName(String name) {
+
+		List<Product> products = productRepo.findByProductNameContainingIgnoreCaseAndStatusTrue(name);
+
+		if (products.isEmpty()) {
+			throw new ResourceNotFoundException("Products not found with this name in search: " + name);
+		}
+
 		return products.stream()
 				.map(this::convertToDTO)
-				.collect(Collectors.toList());
+				.collect(Collectors
+						.toList());
 	}
 
 }
